# vdj_m3u_playlist_enforcer

./: Cargo.toml  PKGBUILD  README.md  vdj-m3u-playlist-enforcer.install
config/: example-config.toml
docs/: INSTALL.md
scripts/: package.sh
src/: main.rs  vdj.rs
systemd/: vdj-m3u-playlist-enforcer-scan.service  vdj-m3u-playlist-enforcer-scan.timer  vdj-m3u-playlist-enforcer.service
